--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           <p id="totalA">0 horas</p>
         </div>
         <div class="card">
+          <div class="card">
+          <h3>Total General</h3>
+          <p id="totalGeneral">0 horas</p>
+        </div>
           <h3>Servicio</h3>
           <p id="totalS">0 horas</p>
         </div>
