--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <main>
     <section class="totales">
+      <button onclick="exportarDatos()">💾 Exportar datos</button>
       <h2>Resumen de Horas CAS</h2>
       <div class="cards">
         <div class="card">
