--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </main>
 
   <footer>
-    <p>Hecho con 💡 por un estudiante del BI</p>
+    <p>Creado por Alejandro Sánchez Alejo</p>
   </footer>
 </body>
 </html>
