--- a/index.html
+++ b/index.html
@@ -20,27 +20,33 @@
 
   <main>
     <section class="totales">
-      <button onclick="exportarDatos()">💾 Exportar datos</button>
-      <h2>Resumen de Horas CAS</h2>
-      <div class="cards">
-        <div class="card">
-          <h3>Creatividad</h3>
-          <p id="totalC">0 horas</p>
-        </div>
-        <div class="card">
-          <h3>Actividad</h3>
-          <p id="totalA">0 horas</p>
-        </div>
-        <div class="card">
-          <div class="card">
-          <h3>Total General</h3>
-          <p id="totalGeneral">0 horas</p>
-        </div>
-          <h3>Servicio</h3>
-          <p id="totalS">0 horas</p>
-        </div>
-      </div>
-    </section>
+  <div class="totales-top">
+    <h2>Resumen de Horas CAS</h2>
+    <button class="btn" onclick="exportarDatos()">💾 Exportar datos</button>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <h3>Creatividad</h3>
+      <p id="totalC">0 horas</p>
+    </div>
+
+    <div class="card">
+      <h3>Actividad</h3>
+      <p id="totalA">0 horas</p>
+    </div>
+
+    <div class="card">
+      <h3>Servicio</h3>
+      <p id="totalS">0 horas</p>
+    </div>
+
+    <div class="card highlight">
+      <h3>Total General</h3>
+      <p id="totalGeneral">0 horas</p>
+    </div>
+  </div>
+</section>
 
     <section class="reflexiones-preview">
       <h2>Últimas Reflexiones</h2>
