--- a/actividades.html
+++ b/actividades.html
@@ -50,5 +50,8 @@
       </table>
     </section>
   </main>
+  <footer class="site-footer">
+  <p>Creado por Alejandro Sánchez Alejo</p>
+</footer>
 </body>
 </html>
