--- a/horario.html
+++ b/horario.html
@@ -42,5 +42,8 @@
       <button id="limpiarHorario" class="danger">Limpiar</button>
     </section>
   </main>
+  <footer class="site-footer">
+  <p>Creado por Alejandro Sánchez Alejo</p>
+</footer>
 </body>
 </html>
