--- a/reflexiones.html
+++ b/reflexiones.html
@@ -30,5 +30,8 @@
       <div id="listaReflexiones" class="lista-reflexiones"></div>
     </section>
   </main>
+  <footer class="site-footer">
+  <p>Creado por Alejandro Sánchez Alejo</p>
+</footer>
 </body>
 </html>
