--- a/reflexiones.html
+++ b/reflexiones.html
@@ -22,7 +22,7 @@
     <form id="formReflexion" class="formulario">
       <input type="text" id="tituloReflexion" placeholder="Título de la reflexión" required>
       <textarea id="textoReflexion" placeholder="Escribe tu reflexión aquí..." rows="5" required></textarea>
-      <button type="submit">Guardar Reflexión</button>
+      <button type="submit" class="btn">Guardar Reflexión</button>
     </form>
 
     <section>
