--- a/actividades.html
+++ b/actividades.html
@@ -30,7 +30,7 @@
       <input type="number" id="horas" placeholder="Horas" min="1" required>
       <input type="date" id="fecha" required>
       <textarea id="descripcion" placeholder="Descripción breve"></textarea>
-      <button type="submit">Guardar Actividad</button>
+      <button type="submit" class="btn">Guardar Actividad</button>
     </form>
 
     <section>
