--- a/horario.html
+++ b/horario.html
@@ -38,8 +38,8 @@
           <tr><td>Domingo</td><td contenteditable="true"></td></tr>
         </tbody>
       </table>
-      <button id="guardarHorario">Guardar Horario</button>
-      <button id="limpiarHorario" class="danger">Limpiar</button>
+      <button id="guardarHorario" class="btn">Guardar Horario</button>
+      <button id="limpiarHorario" class="btn danger">Limpiar</button>
     </section>
   </main>
   <footer class="site-footer">
