--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer  class="site-footer">
     <p>Creado por Alejandro Sánchez Alejo</p>
   </footer>
 </body>
