--- a/reflexiones.html
+++ b/reflexiones.html
@@ -21,7 +21,10 @@
   <main>
     <form id="formReflexion" class="formulario">
       <input type="text" id="tituloReflexion" placeholder="Título de la reflexión" required>
-      <textarea id="textoReflexion" placeholder="Escribe tu reflexión aquí..." rows="5" required></textarea>
+      <div class="textarea-container">
+        <textarea id="textoReflexion" placeholder="Escribe tu reflexión aquí..." rows="5" required></textarea>
+        <div id="wordCount" class="word-counter">0 palabras</div>
+      </div>
       <button type="submit" class="btn">Guardar Reflexión</button>
     </form>
 
